// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot for 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h2
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling
       
      <span>
        $20.00
      </span>
      .
    </h2>
    <div
      className="page-header__actions"
    >
      <Link
        className="btn btn--animate"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should match snapshot for more than 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h2
      className="page-header__title"
    >
      Viewing 
      <span>
        2
      </span>
       
      expenses
       totalling
       
      <span>
        $40.00
      </span>
      .
    </h2>
    <div
      className="page-header__actions"
    >
      <Link
        className="btn btn--animate"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
